Update to beta 1.1.4 - add speedometer